package com.hcf.head.first.design.pattern.chapter03.condiment;

import com.hcf.head.first.design.pattern.chapter03.beverage.Beverage;



public abstract class CondimentDecorator extends Beverage {

}
